--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tên tớ có thể là thứ để bé từ chối ngkh chứ</title>
+    <title>Qnhu của Duy</title>
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 90vh;
+            height: 100vh;
             background-color: #000;
             margin: 0;
         }
 
         .glow {
-            font-size: 100px;
+            font-size: 10vw; /* Kích thước chữ sẽ bằng 10% chiều rộng của viewport */
             color: #fff;
             text-align: center;
             animation: glow 1.5s ease-in-out infinite alternate;
@@ -23,15 +21,16 @@
 
         @keyframes glow {
             from {
-                text-shadow: 0 0 10px #fff, 0 0 20px #b340ff, 0 0 30px #c6adff, 0 0 40px #ff8888, 0 0 50px #ff00ff, 0 0 60px #ff00ff, 0 0 70px #ff00ff;
+                text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff, 0 0 70px #ff00ff;
             }
             to {
-                text-shadow: 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #fd9efd, 0 0 50px #ff00ff, 0 0 60px #fcff67, 0 0 70px #ff00ff, 0 0 80px #ff00ff;
+                text-shadow: 0 0 20px #fff, 0 0 30px #ff00ff, 0 0 40px #ff00ff, 0 0 50px #ff00ff, 0 0 60px #ff00ff, 0 0 70px #ff00ff, 0 0 80px #ff00ff;
             }
         }
     </style>
 </head>
 <body>
-    <div class="glow">QNhu là của Duy, đã có ck nhé, thả tim cái địtmẹmày, ngứa mắt vaicac</div>
-</body>
-</html>
+    <div class="glow">QNhu là của Duy nhé, dã có ck, thả tim cái địtcụmày, mả mẹ m đấy?phiền vậy</div>
+
+
+</body></html>
