--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <div class="glow">QNhu là của Duy nhé, dã có ck, thả tim cái địtcụmày, mả mẹ m đấy?phiền vậy</div>
+    <div class="glow">QNhu là của Duy nhé, dã có ck, thả tim cái địtcụmày, địtmẹmđấy?phiền vậy nhóc</div>
 
 
 </body></html>
