--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 90vh;
             background-color: #000;
             margin: 0;
         }
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <div class="glow">QNhu là của Duy nhé, dã có ck, thả tim cái địtcụmày, địtmẹmđấy?phiền vậy nhóc</div>
+    <div class="glow">QNhu là của Duy nhé, đã có ck, thả tim cái địtcụmày, địtmẹmđấy?phiền vậy nhóc mời cút</div>
 
 
 </body></html>
