--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qnhu của Duy</title>
+    <link rel="icon" type="image/x-icon" href="./flower_346218.png">
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 90vh;
+            height: 100vh;
             background-color: #000;
             margin: 0;
         }
