--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qnhu của Duy</title>
-    <link rel="icon" type="image/x-icon" href="./flower_346218.png">
+    <link rel="icon" type="image/x-icon" href="448171560_987169420074983_2804902102351174742_n.jpg">
     <style>
         body {
             display: flex;
